--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-  {% include head.html %}
-  {% include google_analytics.html %}
-  <body>
+{% include head.html %}
+{% include google_analytics.html %}
+<body>
 
     {% include sidebar.html %}
 
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
-         content to avoid any CSS collisions with our real content. -->
+    content to avoid any CSS collisions with our real content. -->
     <div class="wrap">
-      <div class="masthead">
-        <div class="container">
-          <h3 class="masthead-title">
-            <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
-            {% for page in site.pages_list %}
-                &nbsp;&nbsp;&nbsp;
-                <small><a href="{{ page[1] }}">{{ page[0] }}</a></small>
-            {% endfor %}
-          </h3>
+        <div class="masthead">
+            <div class="container">
+                <h3 class="masthead-title">
+                    <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+                    <small>{{ site.tagline }}</small>
+                    {% for page in site.pages_list %}
+                    &nbsp;&nbsp;&nbsp;
+                    <small><a href="{{ page[1] }}">{{ page[0] }}</a></small>
+                    {% endfor %}
+                </h3>
+            </div>
         </div>
-      </div>
 
-      <div class="container content">
+        <div class="container content">
         {{ content }}
-      </div>
+        </div>
     </div>
 
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
     <script>
-      (function(document) {
+    (function(document) {
         var toggle = document.querySelector('.sidebar-toggle');
         var sidebar = document.querySelector('#sidebar');
         var checkbox = document.querySelector('#sidebar-checkbox');
 
         document.addEventListener('click', function(e) {
-          var target = e.target;
+            var target = e.target;
 
-          if(!checkbox.checked ||
-             sidebar.contains(target) ||
-             (target === checkbox || target === toggle)) return;
+            if(!checkbox.checked || 
+                sidebar.contains(target) || 
+                (target === checkbox || target === toggle)) 
+                return;
 
-          checkbox.checked = false;
+            checkbox.checked = false;
         }, false);
-      })(document);
+    })(document);
     </script>
-  </body>
+</body>
 </html>
